--- a/portfolio.html
+++ b/portfolio.html
@@ -21,188 +21,192 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <div class="header-container">
-      <header class="header">
+
+    <header class="header">
+      <div class="container">
         <nav>
           <a href="index.html" class="logo">
             <span class="logo-web">Web </span>Studio
           </a>
 
           <ul class="site-nav">
-            <li>
+            <li class="list">
               <a href="index.html">Студия</a>
             </li>
-            <li>
+            <li class="list">
               <a class="current" href="./portfolio.html">Портфолио</a>
             </li>
-            <li>
+            <li class="list">
               <a href="#contacts">Контакты</a>
             </li>
           </ul>
           <ul class="mail-tel">
-            <li>
+            <li class="list">
               <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li>
+            <li class="list">
               <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
         </nav>
-      </header>
-    </div>
+      </div>
+    </header>
+
     <!-- Основной контент -->
     <main>
-      <ul class="radio-buttons">
-        <li>
-          <a href="">
-            Все
-          </a>
-        </li>
-        <li>
-          <a href="">
-            Веб-сайты
-          </a>
-        </li>
-        <li>
-          <a href="">
-            Приложения
-          </a>
-        </li>
-        <li>
-          <a href="">
-            Дизайн
-          </a>
-        </li>
-        <li>
-          <a href="">
-            Маркетинг
-          </a>
-        </li>
-      </ul>
-
-      <!-- Наши работы -->
-
-      <section>
-        <h1 class="hiden">Наши работы</h1>
-        <ul class="our-projects">
-          <li>
+      <div class="container">
+        <ul class="radio-buttons">
+          <li class="list">
             <a href="">
-              <img
-                src="./img/portfolio-linked-pic/section1/img1.jpg"
-                alt="ноутбук"
-                width="370"
-              />
-              <h2>
-                Технокряк
-              </h2>
-              <p>Веб-сайт</p>
+              Все
             </a>
           </li>
-          <li>
+          <li class="list">
             <a href="">
-              <img
-                src="./img/portfolio-linked-pic/section1/img2.jpg"
-                alt="два баскетболиста в игре"
-                width="370"
-              />
-              <h2>
-                Постер New Orlean vs Golden Star
-              </h2>
-              <p>Дизайн</p>
+              Веб-сайты
             </a>
           </li>
-          <li>
+          <li class="list">
             <a href="">
-              <img
-                src="./img/portfolio-linked-pic/section1/img3.jpg"
-                alt="логотип ресторна морепродуктов"
-                width="370"
-              />
-              <h2>Ресторан Seafood</h2>
-
-              <p>Приложение</p>
+              Приложения
             </a>
           </li>
-          <li>
+          <li class="list">
             <a href="">
-              <img
-                src="./img/portfolio-linked-pic/section2/img1.jpg"
-                alt="наушники"
-                width="370"
-              />
-              <h2>
-                Проект Prime
-              </h2>
-              <p>
-                Маркетинг
-              </p>
+              Дизайн
             </a>
           </li>
-          <li>
+          <li class="list">
             <a href="">
-              <img
-                src="./img/portfolio-linked-pic/section2/img2.jpg"
-                alt="картинка двух коробочек"
-                width="370"
-              />
-              <h2>
-                Проект Boxes
-              </h2>
-              <p>Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./img/portfolio-linked-pic/section2/img3.jpg"
-                alt="компьютер"
-                width="370"
-              />
-              <h2>
-                <span lang="en">Inspiration has no Borders</span>
-              </h2>
-
-              <p>Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./img/portfolio-linked-pic/section3/img1.jpg"
-                alt="изображение журнала"
-                width="370"
-              />
-              <h2>Издание <span lang="en">Limited Edition</span></h2>
-              <p>Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./img/portfolio-linked-pic/section3/img2.jpg"
-                alt="бирка"
-                width="370"
-              />
-              <h2>Проект <span lang="en">LAB</span></h2>
-
-              <p>Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./img/portfolio-linked-pic/section3/img3.jpg"
-                alt="ноутбук"
-                width="370"
-              />
-              <h2>
-                <span lang="en">Growing Business</span>
-              </h2>
-              <p>Приложение</p>
+              Маркетинг
             </a>
           </li>
         </ul>
-      </section>
+      </div>
+      <!-- Наши работы -->
+      <div class="projects-container">
+        <section>
+          <h1 class="hiden">Наши работы</h1>
+          <ul class="our-projects">
+            <li class="list">
+              <a href="">
+                <img
+                  src="./img/portfolio-linked-pic/section1/img1.jpg"
+                  alt="ноутбук"
+                  width="370"
+                />
+                <h2>
+                  Технокряк
+                </h2>
+                <p>Веб-сайт</p>
+              </a>
+            </li>
+            <li class="list">
+              <a href="">
+                <img
+                  src="./img/portfolio-linked-pic/section1/img2.jpg"
+                  alt="два баскетболиста в игре"
+                  width="370"
+                />
+                <h2>
+                  Постер New Orlean vs Golden Star
+                </h2>
+                <p>Дизайн</p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img
+                  src="./img/portfolio-linked-pic/section1/img3.jpg"
+                  alt="логотип ресторна морепродуктов"
+                  width="370"
+                />
+                <h2>Ресторан Seafood</h2>
+
+                <p>Приложение</p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img
+                  src="./img/portfolio-linked-pic/section2/img1.jpg"
+                  alt="наушники"
+                  width="370"
+                />
+                <h2>
+                  Проект Prime
+                </h2>
+                <p>
+                  Маркетинг
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img
+                  src="./img/portfolio-linked-pic/section2/img2.jpg"
+                  alt="картинка двух коробочек"
+                  width="370"
+                />
+                <h2>
+                  Проект Boxes
+                </h2>
+                <p>Приложение</p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img
+                  src="./img/portfolio-linked-pic/section2/img3.jpg"
+                  alt="компьютер"
+                  width="370"
+                />
+                <h2>
+                  <span lang="en">Inspiration has no Borders</span>
+                </h2>
+
+                <p>Веб-сайт</p>
+              </a>
+            </li>
+            <li class="list">
+              <a href="">
+                <img
+                  src="./img/portfolio-linked-pic/section3/img1.jpg"
+                  alt="изображение журнала"
+                  width="370"
+                />
+                <h2>Издание <span lang="en">Limited Edition</span></h2>
+                <p>Дизайн</p>
+              </a>
+            </li>
+            <li class="list">
+              <a href="">
+                <img
+                  src="./img/portfolio-linked-pic/section3/img2.jpg"
+                  alt="бирка"
+                  width="370"
+                />
+                <h2>Проект <span lang="en">LAB</span></h2>
+
+                <p>Маркетинг</p>
+              </a>
+            </li>
+            <li class="list">
+              <a href="">
+                <img
+                  src="./img/portfolio-linked-pic/section3/img3.jpg"
+                  alt="ноутбук"
+                  width="370"
+                />
+                <h2>
+                  <span lang="en">Growing Business</span>
+                </h2>
+                <p>Приложение</p>
+              </a>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
 
     <!--  Подвал -->
@@ -234,7 +238,7 @@
         <div>
           <b class="bold-text">присоединяйтесь</b>
           <ul>
-            <li>
+            <li class="list">
               <a href="https://www.instagram.com/">
                 <img
                   src="./img/svg/social_links/instagram.svg"
@@ -242,17 +246,17 @@
                 />
               </a>
             </li>
-            <li>
+            <li class="list">
               <a href="https://twitter.com/">
                 <img src="./img/svg/social_links/twitter.svg" alt="твитер" />
               </a>
             </li>
-            <li>
+            <li class="list">
               <a href="https://www.facebook.com/">
                 <img src="./img/svg/social_links/facebook.svg" alt="фейсбук" />
               </a>
             </li>
-            <li>
+            <li class="list">
               <a href="https://www.linkedin.com/">
                 <img
                   src="./img/svg/social_links/linkedin.svg"
