--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <header class="header">
       <div class="container">
-        <nav>
+        <nav class="navigation">
           <a href="index.html" class="logo">
             <span class="logo-web">Web </span>Studio
           </a>
