--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       <section class="section">
         <div class="container">
-          <ul class="features-pic">
+          <ul class="features">
             <li class="list">
               <img src="./img/svg/features/antenna.svg" alt="антена" />
               <h2 class="features-title">
@@ -121,7 +121,7 @@
       <section class="section">
         <div class="container">
           <h3 class="heading">Чем мы занимаемся</h3>
-          <ul class="work-pic">
+          <ul class="work-examples">
             <li class="list">
               <img
                 src="./img/what-we-do/imgLT.jpg"
