--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
 
     <header class="header">
       <div class="container">
-        <nav>
+        <nav class="navigation">
           <a href="index.html" class="logo">
             <span class="logo-web">Web </span>Studio
           </a>
@@ -53,159 +53,180 @@
 
     <!-- Основной контент -->
     <main>
-      <div class="container">
-        <ul class="radio-buttons">
-          <li class="list">
-            <a href="">
-              Все
-            </a>
-          </li>
-          <li class="list">
-            <a href="">
-              Веб-сайты
-            </a>
-          </li>
-          <li class="list">
-            <a href="">
-              Приложения
-            </a>
-          </li>
-          <li class="list">
-            <a href="">
-              Дизайн
-            </a>
-          </li>
-          <li class="list">
-            <a href="">
-              Маркетинг
-            </a>
-          </li>
-        </ul>
-      </div>
       <!-- Наши работы -->
-      <div class="projects-container">
-        <section>
-          <h1 class="hiden">Наши работы</h1>
-          <ul class="our-projects">
-            <li class="list">
-              <a href="">
-                <img
-                  src="./img/portfolio-linked-pic/section1/img1.jpg"
-                  alt="ноутбук"
-                  width="370"
-                />
-                <h2>
-                  Технокряк
-                </h2>
-                <p>Веб-сайт</p>
-              </a>
-            </li>
-            <li class="list">
-              <a href="">
-                <img
-                  src="./img/portfolio-linked-pic/section1/img2.jpg"
-                  alt="два баскетболиста в игре"
-                  width="370"
-                />
-                <h2>
-                  Постер New Orlean vs Golden Star
-                </h2>
-                <p>Дизайн</p>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img
-                  src="./img/portfolio-linked-pic/section1/img3.jpg"
-                  alt="логотип ресторна морепродуктов"
-                  width="370"
-                />
-                <h2>Ресторан Seafood</h2>
 
-                <p>Приложение</p>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img
-                  src="./img/portfolio-linked-pic/section2/img1.jpg"
-                  alt="наушники"
-                  width="370"
-                />
-                <h2>
-                  Проект Prime
-                </h2>
-                <p>
+      <section class="main-section">
+        <div class="container">
+          <div class="buttons-container">
+            <ul class="radio-buttons">
+              <li class="list">
+                <a href="">
+                  Все
+                </a>
+              </li>
+              <li class="list">
+                <a href="">
+                  Веб-сайты
+                </a>
+              </li>
+              <li class="list">
+                <a href="">
+                  Приложения
+                </a>
+              </li>
+              <li class="list">
+                <a href="">
+                  Дизайн
+                </a>
+              </li>
+              <li class="list">
+                <a href="">
                   Маркетинг
-                </p>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img
-                  src="./img/portfolio-linked-pic/section2/img2.jpg"
-                  alt="картинка двух коробочек"
-                  width="370"
-                />
-                <h2>
-                  Проект Boxes
-                </h2>
-                <p>Приложение</p>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img
-                  src="./img/portfolio-linked-pic/section2/img3.jpg"
-                  alt="компьютер"
-                  width="370"
-                />
-                <h2>
-                  <span lang="en">Inspiration has no Borders</span>
-                </h2>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <h1 class="hiden">Наши работы</h1>
+          <ul class="flexbox-projects">
+            <div class="flexbox-container">
+              <li class="flexbox-list">
+                <a href="">
+                  <img
+                    src="./img/portfolio-linked-pic/section1/img1.jpg"
+                    alt="ноутбук"
+                    width="370"
+                  />
+                  <h2>
+                    Технокряк
+                  </h2>
+                  <p>Веб-сайт</p>
+                </a>
+              </li>
+            </div>
+            <div class="flexbox-container">
+              <li class="flexbox-list">
+                <a href="">
+                  <img
+                    src="./img/portfolio-linked-pic/section1/img2.jpg"
+                    alt="два баскетболиста в игре"
+                    width="370"
+                  />
+                  <h2>
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p>Дизайн</p>
+                </a>
+              </li>
+            </div>
+            <div class="flexbox-container">
+              <li class="flexbox-list">
+                <a href="">
+                  <img
+                    src="./img/portfolio-linked-pic/section1/img3.jpg"
+                    alt="логотип ресторна морепродуктов"
+                    width="370"
+                  />
+                  <h2>Ресторан Seafood</h2>
+                  <p>Приложение</p>
+                </a>
+              </li>
+            </div>
+            <div class="flexbox-container">
+              <li class="flexbox-list">
+                <a href="">
+                  <img
+                    src="./img/portfolio-linked-pic/section2/img1.jpg"
+                    alt="наушники"
+                    width="370"
+                  />
+                  <h2>
+                    Проект Prime
+                  </h2>
+                  <p>
+                    Маркетинг
+                  </p>
+                </a>
+              </li>
+            </div>
 
-                <p>Веб-сайт</p>
-              </a>
-            </li>
-            <li class="list">
-              <a href="">
-                <img
-                  src="./img/portfolio-linked-pic/section3/img1.jpg"
-                  alt="изображение журнала"
-                  width="370"
-                />
-                <h2>Издание <span lang="en">Limited Edition</span></h2>
-                <p>Дизайн</p>
-              </a>
-            </li>
-            <li class="list">
-              <a href="">
-                <img
-                  src="./img/portfolio-linked-pic/section3/img2.jpg"
-                  alt="бирка"
-                  width="370"
-                />
-                <h2>Проект <span lang="en">LAB</span></h2>
+            <div class="flexbox-container">
+              <li class="flexbox-list">
+                <a href="">
+                  <img
+                    src="./img/portfolio-linked-pic/section2/img2.jpg"
+                    alt="картинка двух коробочек"
+                    width="370"
+                  />
+                  <h2>
+                    Проект Boxes
+                  </h2>
+                  <p>Приложение</p>
+                </a>
+              </li>
+            </div>
 
-                <p>Маркетинг</p>
-              </a>
-            </li>
-            <li class="list">
-              <a href="">
-                <img
-                  src="./img/portfolio-linked-pic/section3/img3.jpg"
-                  alt="ноутбук"
-                  width="370"
-                />
-                <h2>
-                  <span lang="en">Growing Business</span>
-                </h2>
-                <p>Приложение</p>
-              </a>
-            </li>
+            <div class="flexbox-container">
+              <li class="flexbox-list">
+                <a href="">
+                  <img
+                    src="./img/portfolio-linked-pic/section2/img3.jpg"
+                    alt="компьютер"
+                    width="370"
+                  />
+                  <h2>
+                    <span lang="en">Inspiration has no Borders</span>
+                  </h2>
+                  <p>Веб-сайт</p>
+                </a>
+              </li>
+            </div>
+
+            <div class="flexbox-container">
+              <li class="flexbox-list">
+                <a href="">
+                  <img
+                    src="./img/portfolio-linked-pic/section3/img1.jpg"
+                    alt="изображение журнала"
+                    width="370"
+                  />
+                  <h2>Издание <span lang="en">Limited Edition</span></h2>
+                  <p>Дизайн</p>
+                </a>
+              </li>
+            </div>
+
+            <div class="flexbox-container">
+              <li class="flexbox-list">
+                <a href="">
+                  <img
+                    src="./img/portfolio-linked-pic/section3/img2.jpg"
+                    alt="бирка"
+                    width="370"
+                  />
+                  <h2>Проект <span lang="en">LAB</span></h2>
+                  <p>Маркетинг</p>
+                </a>
+              </li>
+            </div>
+
+            <div class="flexbox-container">
+              <li class="flexbox-list">
+                <a href="">
+                  <img
+                    src="./img/portfolio-linked-pic/section3/img3.jpg"
+                    alt="ноутбук"
+                    width="370"
+                  />
+                  <h2>
+                    <span lang="en">Growing Business</span>
+                  </h2>
+                  <p>Приложение</p>
+                </a>
+              </li>
+            </div>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
 
     <!--  Подвал -->
