--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
         <div class="container">
           <ul class="features">
             <li class="list">
-              <img src="./img/svg/features/antenna.svg" alt="антена" />
+              <img
+                class="pic"
+                src="./img/svg/features/antenna.svg"
+                alt="антена"
+              />
               <h2 class="features-title">
                 Внимание к деталям
               </h2>
@@ -81,7 +85,7 @@
             </li>
 
             <li class="list">
-              <img src="./img/svg/features/clock.svg" alt="часы" />
+              <img class="pic" src="./img/svg/features/clock.svg" alt="часы" />
               <h2 class="features-title">
                 Пунктуальность
               </h2>
@@ -92,7 +96,11 @@
             </li>
 
             <li class="list">
-              <img src="./img/svg/features/diagram.svg" alt="диаграмма" />
+              <img
+                class="pic"
+                src="./img/svg/features/diagram.svg"
+                alt="диаграмма"
+              />
               <h2 class="features-title">
                 Планирование
               </h2>
@@ -103,7 +111,11 @@
             </li>
 
             <li class="list">
-              <img src="./img/svg/features/astronaut.svg" alt="астронавт" />
+              <img
+                class="pic"
+                src="./img/svg/features/astronaut.svg"
+                alt="астронавт"
+              />
               <h2 class="features-title">
                 Современные технологии
               </h2>
@@ -350,10 +362,11 @@
       <section class="section">
         <div class="container">
           <h3 class="heading">Постоянные клиенты</h3>
-          <ul class="clients-links">
+          <ul class="clients">
             <li class="list">
               <a href="">
                 <img
+                  class="pic"
                   src="./img/svg/clients/a-client.svg"
                   alt="лого компании клиента"
                 />
@@ -429,7 +442,7 @@
           >
         </address>
         <!--Блок с соц сетями-->
-        <div class="socials-container">
+        <div class="footer-socials">
           <b class="bold-text">присоединяйтесь</b>
           <ul>
             <li class="list">
