--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
     <section class="section-hero">
       <div class="container">
         <h1 class="hero-text">
-          Эффективные решения <br />
-          для вашего бизнеса
+          Эффективные решения для вашего бизнеса
         </h1>
         <button class="button">Заказать услугу</button>
       </div>
