--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!--герой-->
 
     <section class="section-hero">
-      <div class="container">
+      <div class="hero-container">
         <h1 class="hero-text">
           Эффективные решения для вашего бизнеса
         </h1>
@@ -163,7 +163,7 @@
 
       <!-- Наша команда -->
 
-      <section class="section">
+      <section class="section section-team">
         <div class="container">
           <h3 class="heading">Наша команда</h3>
           <ul class="team">
@@ -171,6 +171,7 @@
 
             <li class="list">
               <img
+                class="photo"
                 src="./img/team/imgfirst.jpg"
                 alt="На фото Николай Кучеренко, дизайнер продукта"
                 width="270"
@@ -181,7 +182,12 @@
               </p>
               <ul class="socials">
                 <li class="list">
-                  <a href="https://www.instagram.com/">
+                  <a
+                    class="link"
+                    href="https://www.instagram.com/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
                     <img
                       src="./img/svg/social_links/instagram.svg"
                       alt="лого инстаграм"
@@ -189,7 +195,12 @@
                   </a>
                 </li>
                 <li class="list">
-                  <a href="https://twitter.com/">
+                  <a
+                    class="link"
+                    href="https://twitter.com/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
                     <img
                       src="./img/svg/social_links/twitter.svg"
                       alt="твитер"
@@ -197,7 +208,12 @@
                   </a>
                 </li>
                 <li class="list">
-                  <a href="https://www.facebook.com/">
+                  <a
+                    class="link"
+                    href="https://www.facebook.com/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
                     <img
                       src="./img/svg/social_links/facebook.svg"
                       alt="фейсбук"
@@ -205,7 +221,12 @@
                   </a>
                 </li>
                 <li class="list">
-                  <a href="https://www.linkedin.com/">
+                  <a
+                    class="link"
+                    href="https://www.linkedin.com/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
                     <img
                       src="./img/svg/social_links/linkedin.svg"
                       alt="линкед ин"
@@ -217,6 +238,7 @@
 
             <li class="list">
               <img
+                class="photo"
                 src="./img/team/imgsecond.jpg"
                 alt="На фото Ольга Иванова, веб разработчик"
                 width="270"
@@ -227,7 +249,11 @@
               </p>
               <ul class="socials">
                 <li class="list">
-                  <a href="https://www.instagram.com/">
+                  <a
+                    href="https://www.instagram.com/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
                     <img
                       src="./img/svg/social_links/instagram.svg"
                       alt="лого инстаграм"
@@ -235,7 +261,12 @@
                   </a>
                 </li>
                 <li class="list">
-                  <a href="https://twitter.com/">
+                  <a
+                    class="link"
+                    href="https://twitter.com/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
                     <img
                       src="./img/svg/social_links/twitter.svg"
                       alt="твитер"
@@ -243,7 +274,12 @@
                   </a>
                 </li>
                 <li class="list">
-                  <a href="https://www.facebook.com/">
+                  <a
+                    class="link"
+                    href="https://www.facebook.com/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
                     <img
                       src="./img/svg/social_links/facebook.svg"
                       alt="фейсбук"
@@ -251,7 +287,12 @@
                   </a>
                 </li>
                 <li class="list">
-                  <a href="https://www.linkedin.com/">
+                  <a
+                    class="link"
+                    href="https://www.linkedin.com/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
                     <img
                       src="./img/svg/social_links/linkedin.svg"
                       alt="линкед ин"
@@ -263,6 +304,7 @@
 
             <li class="list">
               <img
+                class="photo"
                 src="./img/team/imgthird.jpg"
                 alt="На фото Андрей Шевченко, маркетолог"
                 width="270"
@@ -273,7 +315,12 @@
               </p>
               <ul class="socials">
                 <li class="list">
-                  <a href="https://www.instagram.com/">
+                  <a
+                    class="link"
+                    href="https://www.instagram.com/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
                     <img
                       src="./img/svg/social_links/instagram.svg"
                       alt="лого инстаграм"
@@ -281,7 +328,12 @@
                   </a>
                 </li>
                 <li class="list">
-                  <a href="https://twitter.com/">
+                  <a
+                    class="link"
+                    href="https://twitter.com/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
                     <img
                       src="./img/svg/social_links/twitter.svg"
                       alt="твитер"
@@ -289,7 +341,12 @@
                   </a>
                 </li>
                 <li class="list">
-                  <a href="https://www.facebook.com/">
+                  <a
+                    class="link"
+                    href="https://www.facebook.com/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
                     <img
                       src="./img/svg/social_links/facebook.svg"
                       alt="фейсбук"
@@ -297,7 +354,12 @@
                   </a>
                 </li>
                 <li class="list">
-                  <a href="https://www.linkedin.com/">
+                  <a
+                    class="link"
+                    href="https://www.linkedin.com/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
                     <img
                       src="./img/svg/social_links/linkedin.svg"
                       alt="линкед ин"
@@ -309,6 +371,7 @@
 
             <li class="list">
               <img
+                class="photo"
                 src="./img/team/imgfourth.jpg"
                 alt="На фото Иван Николаев, дизайнер"
                 width="270"
@@ -319,7 +382,12 @@
               </p>
               <ul class="socials">
                 <li class="list">
-                  <a href="https://www.instagram.com/">
+                  <a
+                    class="link"
+                    href="https://www.instagram.com/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
                     <img
                       src="./img/svg/social_links/instagram.svg"
                       alt="лого инстаграм"
@@ -327,7 +395,12 @@
                   </a>
                 </li>
                 <li class="list">
-                  <a href="https://twitter.com/">
+                  <a
+                    class="link"
+                    href="https://twitter.com/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
                     <img
                       src="./img/svg/social_links/twitter.svg"
                       alt="твитер"
@@ -335,7 +408,12 @@
                   </a>
                 </li>
                 <li class="list">
-                  <a href="https://www.facebook.com/">
+                  <a
+                    class="link"
+                    href="https://www.facebook.com/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
                     <img
                       src="./img/svg/social_links/facebook.svg"
                       alt="фейсбук"
@@ -343,7 +421,12 @@
                   </a>
                 </li>
                 <li class="list">
-                  <a href="https://www.linkedin.com/">
+                  <a
+                    class="link"
+                    href="https://www.linkedin.com/"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                  >
                     <img
                       src="./img/svg/social_links/linkedin.svg"
                       alt="линкед ин"
@@ -374,6 +457,7 @@
             <li class="list">
               <a href="">
                 <img
+                  class="pic"
                   src="./img/svg/clients/b-client.svg"
                   alt="лого компании клиента"
                 />
@@ -382,6 +466,7 @@
             <li class="list">
               <a href="">
                 <img
+                  class="pic"
                   src="./img/svg/clients/c-client.svg"
                   alt="лого компании клиента"
                 />
@@ -390,6 +475,7 @@
             <li class="list">
               <a href="">
                 <img
+                  class="pic"
                   src="./img/svg/clients/d-client.svg"
                   alt="лого компании клиента"
                 />
@@ -398,6 +484,7 @@
             <li class="list">
               <a href="">
                 <img
+                  class="pic"
                   src="./img/svg/clients/e-client.svg"
                   alt="лого компании клиента"
                 />
@@ -406,6 +493,7 @@
             <li class="list">
               <a href="">
                 <img
+                  class="pic"
                   src="./img/svg/clients/f-client.svg"
                   alt="лого компании клиента"
                 />
@@ -419,7 +507,7 @@
     <!--Подвал-->
 
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <address class="address-info" id="contacts">
           <div class="logo-container">
             <a href="./index.html" class="logo">
@@ -441,11 +529,16 @@
           >
         </address>
         <!--Блок с соц сетями-->
-        <div class="footer-socials">
+        <div class="footer-flexbox">
           <b class="bold-text">присоединяйтесь</b>
-          <ul>
+          <ul class="socials">
             <li class="list">
-              <a href="https://www.instagram.com/">
+              <a
+                class="link"
+                href="https://www.instagram.com/"
+                target="_blank"
+                rel="noreferrer noopener"
+              >
                 <img
                   src="./img/svg/social_links/instagram.svg"
                   alt="инстаграм"
@@ -453,17 +546,32 @@
               </a>
             </li>
             <li class="list">
-              <a href="https://twitter.com/">
+              <a
+                class="link"
+                href="https://twitter.com/"
+                target="_blank"
+                rel="noreferrer noopener"
+              >
                 <img src="./img/svg/social_links/twitter.svg" alt="твитер" />
               </a>
             </li>
             <li class="list">
-              <a href="https://www.facebook.com/">
+              <a
+                class="link"
+                href="https://www.facebook.com/"
+                target="_blank"
+                rel="noreferrer noopener"
+              >
                 <img src="./img/svg/social_links/facebook.svg" alt="фейсбук" />
               </a>
             </li>
             <li class="list">
-              <a href="https://www.linkedin.com/">
+              <a
+                class="link"
+                href="https://www.linkedin.com/"
+                target="_blank"
+                rel="noreferrer noopener"
+              >
                 <img
                   src="./img/svg/social_links/linkedin.svg"
                   alt="линкед ин"
