--- a/index.html
+++ b/index.html
@@ -123,16 +123,15 @@
             </li>
           </ul>
         </div>
-      </section>
 
-      <!-- Чем мы занимаемся -->
+        <!-- Чем мы занимаемся -->
 
-      <section class="section">
         <div class="container">
           <h3 class="heading">Чем мы занимаемся</h3>
           <ul class="work-examples">
             <li class="list">
               <img
+                class="work-pic"
                 src="./img/what-we-do/imgLT.jpg"
                 alt="на фото ноутбук"
                 width="370"
@@ -141,6 +140,7 @@
             </li>
             <li class="list">
               <img
+                class="work-pic"
                 src="./img/what-we-do/imgMob.jpg"
                 alt="картинка мобильного телефона"
                 width="370"
@@ -149,6 +149,7 @@
             </li>
             <li class="list">
               <img
+                class="work-pic"
                 src="./img/what-we-do/imgMac.jpg"
                 alt="картинка компьютера от компании Эпл"
                 width="370"
