--- a/portfolio.html
+++ b/portfolio.html
@@ -93,6 +93,7 @@
             <li class="flex-list">
               <a href="">
                 <img
+                  class="portfolio-pic"
                   src="./img/portfolio-linked-pic/section1/img1.jpg"
                   alt="ноутбук"
                   width="370"
@@ -109,6 +110,7 @@
             <li class="flex-list">
               <a href="">
                 <img
+                  class="portfolio-pic"
                   src="./img/portfolio-linked-pic/section1/img2.jpg"
                   alt="два баскетболиста в игре"
                   width="370"
@@ -125,6 +127,7 @@
             <li class="flex-list">
               <a href="">
                 <img
+                  class="portfolio-pic"
                   src="./img/portfolio-linked-pic/section1/img3.jpg"
                   alt="логотип ресторна морепродуктов"
                   width="370"
@@ -139,6 +142,7 @@
             <li class="flex-list">
               <a href="">
                 <img
+                  class="portfolio-pic"
                   src="./img/portfolio-linked-pic/section2/img1.jpg"
                   alt="наушники"
                   width="370"
@@ -157,6 +161,7 @@
             <li class="flex-list">
               <a href="">
                 <img
+                  class="portfolio-pic"
                   src="./img/portfolio-linked-pic/section2/img2.jpg"
                   alt="картинка двух коробочек"
                   width="370"
@@ -173,6 +178,7 @@
             <li class="flex-list">
               <a href="">
                 <img
+                  class="portfolio-pic"
                   src="./img/portfolio-linked-pic/section2/img3.jpg"
                   alt="компьютер"
                   width="370"
@@ -189,6 +195,7 @@
             <li class="flex-list">
               <a href="">
                 <img
+                  class="portfolio-pic"
                   src="./img/portfolio-linked-pic/section3/img1.jpg"
                   alt="изображение журнала"
                   width="370"
@@ -203,6 +210,7 @@
             <li class="flex-list">
               <a href="">
                 <img
+                  class="portfolio-pic"
                   src="./img/portfolio-linked-pic/section3/img2.jpg"
                   alt="бирка"
                   width="370"
@@ -217,6 +225,7 @@
             <li class="flex-list">
               <a href="">
                 <img
+                  class="portfolio-pic"
                   src="./img/portfolio-linked-pic/section3/img3.jpg"
                   alt="ноутбук"
                   width="370"
